--- a/lecture2/index.html
+++ b/lecture2/index.html
@@ -806,7 +806,7 @@ reveal:
 
        <div class="figure">
            <img data-src="smith_waterman_example.png" style="width:80%"><br>
-           <a class="cite">Durbin, Eddy, Krogh, Mitchison, "Biological sequence analysis", Cambridge Uni Press, 1998</a>
+           <a href="http://librarysearch.auckland.ac.nz/primo_library/libweb/action/dlDisplay.do?vid=UOA2_A&search_scope=Combined_Local&docId=uoa_alma21156401750002091&fn=permalink" class="cite">Durbin, Eddy, Krogh, Mitchison, "Biological sequence analysis", Cambridge Uni Press, 1998</a>
        </div>
 
    </section>
@@ -839,15 +839,13 @@ reveal:
        X &amp;= (x_1, x_2, \ldots, x_m)
        \end{align*}
 
-       <br>
+       <p>Define $F(i,j)$ (for $i\geq 1$) to be the best sum of match scores in</p>
 
-       <p>Define $F(i,j)$ (for $i\geq 1$) to be the best sum of match scores in
-
-       $(y_1, y_2, y3, \ldots, y_j)$
+       $(y_1, y_2, y_3, \ldots, y_j)$
 
        <p>and</p>
 
-       $(x_1, y_2, y_3, \ldots, x_i)$
+       $(x_1, x_2, x_3, \ldots, x_i)$
 
        <p>assuming $y_j$ is <b>in a matched region</b> and match ends in $x_i$ or $y_j$.</p>
 
@@ -900,7 +898,7 @@ reveal:
 
        <div class="figure">
            <img data-src="repeated_match_example.png" style="width:80%"><br>
-           <a class="cite">Durbin, Eddy, Krogh, Mitchison, "Biological sequence analysis", Cambridge Uni Press, 1998</a>
+           <a href="http://librarysearch.auckland.ac.nz/primo_library/libweb/action/dlDisplay.do?vid=UOA2_A&search_scope=Combined_Local&docId=uoa_alma21156401750002091&fn=permalink" class="cite">Durbin, Eddy, Krogh, Mitchison, "Biological sequence analysis", Cambridge Uni Press, 1998</a>
        </div>
    </section>
 
@@ -928,7 +926,8 @@ reveal:
 
        <div class="figure">
            <img data-src="overlap_match_example.png" style="width:80%"><br>
-           <a class="cite">Durbin, Eddy, Krogh, Mitchison, "Biological sequence analysis", Cambridge Uni Press, 1998</a>
+           <a href="http://librarysearch.auckland.ac.nz/primo_library/libweb/action/dlDisplay.do?vid=UOA2_A&search_scope=Combined_Local&docId=uoa_alma21156401750002091&fn=permalink" class="cite">Durbin, Eddy, Krogh, Mitchison, "Biological sequence analysis", Cambridge Uni Press, 1998</a>
+       </div>
        </div>
    </section>
 
